# CmdGoogle

./: Cargo.toml  LICENSE  README.md
src/: app.rs  event.rs  main.rs  search.rs  utils.rs
src/data/: cache.rs  history.rs  mod.rs
src/ui/: components.rs  home.rs  mod.rs  ready.rs  searching.rs
