[package]
name = "CmdGoogle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
env_logger = "0.11.5"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.21.0"
tokio = { version = "1.41.1", features = ["full"] }
color-eyre = "0.6.3"
ratatui = "0.29.0"
urlencoding = "2.1.3"
crossterm = "0.28.1"
rand = "0.8.5"
webbrowser = "1.0.3"
derive_setters = "0.1.6"
hyper = { version = "0.14", features = ["full"] }
dirs = "6.0.0"
serde = "1.0.217"
serde_derive = "1.0.217"
open = "5.3.2"
bincode = "1.3.3"
unicode-segmentation = "1.12.0"
